# hypertilldb

./: .eslintrc.js  .npmignore  CHANGELOG-Unreleased.md  CHANGELOG.md  CONTRIBUTING.md  HypertillDB.podspec  README.md  SECURITY.md  app.plugin.js  babel.config.js  package.json  react-native.config.js
.github/workflows/: ci.yml  docs-pages.yml
docs-website/: docusaurus.config.js  package.json  sidebars.js
docs-website/blog/: authors.yml
docs-website/docs/docs/: CHANGELOG.md  CONTRIBUTING.md  CRUD.md  Components.md  ExpoDemo.md  Installation.mdx  Model.md  Query.md  README.md  Relation.md  Roadmap.md  Schema.md  Setup.md  Writers.md
docs-website/docs/docs/Advanced/: AdvancedFields.md  CreateUpdateTracking.md  Flow.md  LocalStorage.md  Logging.md  Migrations.md  ProTips.md  SharingDatabaseAcrossTargets.md
docs-website/docs/docs/Implementation/: Architecture.md  DatabaseAdapters.md  Publishing.md  SyncImpl.md
docs-website/docs/docs/Sync/: Backend.md  Contribute.md  FAQ.md  Frontend.md  Intro.md  Troubleshoot.md
docs-website/src/components/HomepageFeatures/: index.js  styles.module.css
docs-website/src/css/: custom.css
docs-website/src/pages/: index.js  index.module.css
docs-website/static/: CNAME
examples/: README.md
examples/book-reader/: README.md  smoke-test.cjs
examples/typescript/: AppSchema.ts  package.json  ts-example.ts  tsconfig.json
examples/typescript/__typetests__/: query.ts  withObservables.tsx
native/: metro-transformer.js
native/android/: build.gradle  gradle.properties
native/android-jsi/: build.gradle
native/android-jsi/src/main/cpp/: CMakeLists.txt  DatabasePlatformAndroid.cpp  DatabasePlatformAndroid.h  JSIInstaller.cpp
native/androidTest/: settings.gradle
native/androidTest/app/: BUCK  build.gradle  proguard-rules.pro
native/ios/HypertillDB/: DatabasePlatformIOS.mm  JSIInstaller.h  JSIInstaller.mm
native/ios/HypertillDB/objc/: WMDatabaseBridge.m
native/iosTest/: Podfile
native/iosTest/HypertillTester/: AppDelegate.swift  HypertillTester-Bridging-Header.h  Info.plist
native/iosTest/HypertillTester.xcodeproj/: project.pbxproj
native/iosTest/HypertillTester.xcworkspace/: contents.xcworkspacedata
native/iosTest/HypertillTesterTests/: BridgeTests.swift  Tests.swift
native/shared/: Database-batch.cpp  Database-jsi.cpp  Database-query.cpp  Database-sqlite.cpp  Database-turboSync.cpp  Database.cpp  Database.h  DatabaseBridge.cpp  DatabasePlatform.h  JSIHelpers.h  Sqlite.cpp  Sqlite.h
native/windows/: HypertillDB.sln
native/windows/HypertillDB/: DatabasePlatformWindows.cpp  HypertillDB.vcxproj  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  WMDatabaseBridge.h
native/windowsE2E/: README.md  jest.config.js  package.json
native/windowsE2E/test/: hypertill.test.ts
native/windowsTest/: HypertillTester.sln
native/windowsTest/HypertillTester/: App.cpp  App.h  App.idl  App.xaml  HypertillTester.vcxproj  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  ReactPackageProvider.cpp  ReactPackageProvider.h  pch.h
plugin/: insertLinesHelper.js  withHypertill.js
plugin/__tests__/: withHypertill.babel.test.js
scripts/: make.mjs  release.mjs  test-ios  update-docusaurus
src/: index.d.ts  index.integrationTests.native.js  index.js  types.js
src/Collection/: RecordCache.js  index.d.ts  index.js  test.js
src/Database/: index.d.ts  index.js  test.js
src/DatabaseProvider/: index.js
src/Model/: helpers.d.ts  helpers.js  index.d.ts  index.js  test.js
src/Query/: index.js
src/QueryDescription/: operators.js
src/QueryDescription/__tests__/: test.js
src/RawRecord/: index.d.ts  index.js
src/Schema/: index.js  metadata.js
src/Schema/migrations/: index.js  test.js
src/__playground__/: index.js
src/__tests__/: setUpIntegrationTestEnv.js
src/__tests__/utils/: makeScheduler.js
src/adapters/: common.js
src/adapters/__tests__/: commonTests.js  helpers.js
src/adapters/auto/: index.d.ts  index.js  index.native.js  index.web.js  metadata.js  test.js
src/adapters/lokijs/: index.js
src/adapters/sqlite/: index.js  type.js
src/decorators/date/: index.js
src/decorators/immutableRelation/: index.js
src/observation/subscribeToQueryWithColumns/: index.js
src/react/: DatabaseProvider.test.js  autoHooks.js  autoHooks.test.js  index.d.ts  index.js  useDatabase.test.js
src/sync/: index.d.ts  index.js
src/sync/debugPrintChanges/: index.js
src/sync/impl/: applyRemote.js  index.js  markAsSynced.js
(+42 files in other folders)
